<resources>
    <string name="title">Title</string>
    <string name="gollect">Gollect</string>
    <string name="subtitle">Hello my name is Jeff</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="app_name">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_recycleBin">Recycle Bin</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="createCol">+</string>
    <string name="appLogo">Logo</string>
    <string name="addItem">Add Item</string>
</resources>