<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gollect.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favourits"
        android:name="com.example.gollect.ui.Favourites.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/nav_recycleBin"
        android:name="com.example.gollect.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_recycleBin"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.gollect.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.gollect.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_recycleBin"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.gollect.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_recycleBin"
        tools:layout="@layout/fragment_favourites" />


</navigation>